<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_detailed_product_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_desc.product_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_height="100dp"
        tools:background="#555"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_big"
        android:paddingRight="@dimen/spacing_big"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:layout_marginBottom="@dimen/spacing_big"
            android:textColor="@color/black"
            android:textSize="@dimen/font_large"
            tools:text="Цена: 2381 руб."
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/description"
            style="@style/TextViewDetailsHeader"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_big"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:text="@string/description"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/font_normal"
            tools:text="Текст текст текст текст текст текст текст текст текст текст текст текст"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            style="@style/TextViewDetailsHeader"
            />

        <ProgressBar
            android:id="@+id/pb_loading_comments"
            android:layout_width="@dimen/size_pb_loading_comments"
            android:layout_height="@dimen/size_pb_loading_comments"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tv_network_is_not_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_gravity="center"
            android:text="@string/cant_load_comments"
            tools:visibility="visible"
            style="@style/TextViewCommentsLoadingFailure"
            />

        <TextView
            android:id="@+id/tv_no_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_gravity="center"
            android:text="@string/no_comments"
            tools:visibility="visible"
            style="@style/TextViewCommentsLoadingFailure"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/height_tv_add_comment"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>